final/styles.css
<style>
    
body { 
    margin:0;
    font-family:Arial, sans-serif;
    background:#121212;
    color:white; 
     
header {
    background:#1f1f1f;
    padding:20px; 
    text-align:center; 
    border-bottom:3px solid crimson;
}
h1 { color:crimson; margin:0; }
      
nav { text-align:center; margin:20px; }
nav a { color:white; margin:8px; text-decoration:none; font-weight:bold; }
nav a:hover { color:crimson; }

      

.hero {
    background:linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.6)),
    url("https://en.wikipedia.org/wiki/Special:FilePath/Attack_on_Titan_Season_1.jpg");
    background-size:cover;
    background-position:center;
    padding:80px 20px;
    text-align:center;
}

section { padding:20px; text-align:center; }

.gallery {
    display:flex;
    justify-content:center;
    flex-wrap:wrap;
    gap:20px;
    padding:20px;
}

.gallery img {
    width:250px;
    height:350px;
    object-fit:cover;
    border-radius:12px;
    transition:0.3s;
}

.gallery img:hover {
    transform:scale(1.05);
}

button {
    padding:10px 20px;
    background:crimson;
    color:white;
    border:none;
    border-radius:5px;
    cursor:pointer;
}

      .video-card {
    background: #1e1e1e;
    max-width: 800px;
    margin: 30px auto;
    padding: 20px;
    border-radius: 12px;
    box-shadow: 0 0 15px crimson;
}

.video-container {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    border-radius: 10px;
}

.video-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
      .cta-button {
    display: inline-block;
    margin-top: 20px;
    padding: 12px 25px;
    color: white;
    background: crimson;
    border-radius: 8px;
    text-decoration: none;
    font-weight: bold;
    transition: 0.3s;
    box-shadow: 0 0 10px crimson;
}

.cta-button:hover {
    background: white;
    color: crimson;
    box-shadow: 0 0 20px crimson, 0 0 40px crimson;
    transform: scale(1.05);
}
      .light-mode {
    background: white;
    color: black;
}

.light-mode header {
    background: #f0f0f0;
    border-bottom: 3px solid crimson;
}

.light-mode nav a {
    color: black;
}

.light-mode .card {
    background: #f5f5f5;
    color: black;
}

    main {
    max-width: 1100px;
    margin: 0 auto;
    padding: 20px;
    text-align: center;
}
</style>
    

